k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hearly-backend
  labels:
    app: hearly-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hearly-backend
  template:
    metadata:
      labels:
        app: hearly-backend
    spec:
      containers:
        - name: hearly-backend
          image: us-west1-docker.pkg.dev/ccbd-25-sergiomancini/hearly-repo/hearly-backend:v9
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hearly-backend-service
spec:
  selector:
    app: hearly-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
