k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hearly-frontend
  labels:
    app: hearly-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hearly-frontend
  template:
    metadata:
      labels:
        app: hearly-frontend
    spec:
      containers:
        - name: hearly-frontend
          image: us-west1-docker.pkg.dev/ccbd-25-sergiomancini/hearly-repo/hearly-frontend:v6
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hearly-frontend-service
spec:
  selector:
    app: hearly-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
